Kleopatra: Suppress errors of WKD lookups
Closed, ResolvedPublic

Assigned To
Authored By
• ikloecker
Sep 14 2022, 5:34 PM
Tags

Description

This is a spin-off of T6014: Add support for relative redirect URI-references to dirmngr.

@aheinecke wrote:

For example "foo@x500.bund.de". But what I meant is that code handling WKD errors that show an information to the user should not exist. All WKD lookup errors in Search should be silently discarded. Because the user does not know that he is performing a WKD search so she should not be informed about errors in that.

Looking up "foo@x500.bund.de" in Kleopatra results in a "General error" being reported.

Event Timeline

• ikloecker created this task.

I agree with that task. Errors should be logged but not exposed to the user. I like the decryption / verification audit log we have now for some years (quite new) which allows users to view the stderr of gpgme jobs. Something like that -> Perfect. I think we need this for Import also and basically for every job. If you had an idea, maybe in the status bar or so, to indicate that more error information would be available. That would be my dream solution.

• ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
• ikloecker changed the task status from Open to Testing.Sep 16 2022, 11:19 AM
• ikloecker removed • ikloecker as the assignee of this task.
• ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
• ikloecker added a project: Restricted Project.

Lookup on server should no longer report any errors caused by a failed WKD lookup.

• werner removed a project: Restricted Project.Sep 22 2022, 10:40 AM
• ebo claimed this task.
• ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
• ebo added a subscriber: • ebo.

works, I only see the error in debugview.
Furthermore, I use the occasion to point to T6493, Improvements on search window ;-)