Do not bother users with errors during WKD lookup

Most users won't even know that a WKD lookup happens additionally to the
keyserver lookup. Moreover, the errors will most likely be caused by
servers that do not support WKD and there's little most users can do
about this.

GnuPG-bug-id: 6202